@@ -40,6 +40,10 @@ enum pic_processor {
   no_processor,
   eeprom8,
   generic,
+  pic10f200,
+  pic10f202,
+  pic10f204,
+  pic10f206,
   pic12c508,
   pic12c508a,
   pic12c509,
@@ -155,16 +159,22 @@ enum pic_processor {
   pic16f505,
   pic16f54,
   pic16f57,
+  pic16f59,
   pic16f627,
   pic16f627a,
   pic16f628,
   pic16f628a,
   pic16f630,
   pic16f636,
+  pic16f639,
   pic16f648a,
   pic16f676,
   pic16f684,
+  pic16f685,
+  pic16f687,
   pic16f688,
+  pic16f689,
+  pic16f690,
   pic16f716,
   pic16f72,
   pic16f73,
@@ -271,24 +281,44 @@ enum pic_processor {
   pic18f4620,
   pic18f4680,
   pic18f4681,
+  pic18f6310,
+  pic18f6390,
   pic18f6410,
   pic18f6490,
+  pic18f64j15,
   pic18f6520,
   pic18f6525,
   pic18f6585,
+  pic18f65j10,
+  pic18f65j15,
   pic18f6620,
   pic18f6621,
+  pic18f6627,
   pic18f6680,
+  pic18f66j10,
+  pic18f66j15,
   pic18f6720,
+  pic18f6722,
+  pic18f67j10,
+  pic18f8310,
+  pic18f8390,
   pic18f8410,
   pic18f8490,
+  pic18f84j15,
   pic18f8520,
   pic18f8525,
   pic18f8585,
+  pic18f85j10,
+  pic18f85j15,
   pic18f8620,
   pic18f8621,
+  pic18f8627,
   pic18f8680,
+  pic18f86j10,
+  pic18f86j15,
   pic18f8720,
+  pic18f8722,
+  pic18f87j10,
   rf509af,	
   rf509ag,	
   rf675f,
